# ensemble-speaker-verification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LESSONS_LEARNED.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_FIXES.md  QUICKSTART.md  README.md  REFERENCE.md  SETUP.md  librosa_test.py  pyproject.toml  record_voice.py  requirements.txt  test_demo_ensemble.py  verify_installation.py  voice-speech-verification.py
src/speech_verification/: __init__.py  __main__.py  cli.py  config.py
src/speech_verification/core/: __init__.py  cnn.py  fusion.py  mfcc.py
src/speech_verification/utils/: __init__.py  audio.py  metrics.py  visualization.py
tests/: __init__.py  generate_test_audio.py  run_all_tests.py  test_basic.py  test_cli.py  test_cli_real.py  test_integration.py  test_run_all_suites.py  test_verification_real.py  test_version.py  test_without_deps.py
