[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-verification-ensemble"
version = "2.0.0"
description = "Multi-modal speaker verification system using MFCC+DTW and CNN fusion"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Speech Verification Ensemble Contributors" },
]
keywords = [
    "speech",
    "verification",
    "speaker-recognition",
    "audio",
    "deep-learning",
    "mfcc",
    "dtw",
    "cnn",
    "resemblyzer",
    "biometrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed",
]

dependencies = [
    "librosa>=0.9.2",
    "resemblyzer>=0.1.1",
    "dtw-python>=1.3.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "soundfile>=0.11.0",
    "audioread>=2.1.9",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",  # Parallel testing
    "coverage[toml]>=7.0.0",  # Coverage reporting
    "pre-commit>=3.0.0",
    "hatch>=1.7.0",
    "uv>=0.1.0",  # Fast package manager
]

viz = [
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
]

audio = [
    "pydub>=0.25.1",
    "sounddevice>=0.4.5",
    "python-speech-features>=0.6",
]

all = [
    "speech-verification-ensemble[dev,viz,audio]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/Speech-Verification-Ensemble"
Documentation = "https://github.com/umitkacar/Speech-Verification-Ensemble#readme"
Repository = "https://github.com/umitkacar/Speech-Verification-Ensemble"
Issues = "https://github.com/umitkacar/Speech-Verification-Ensemble/issues"

[project.scripts]
speech-verify = "speech_verification.cli:main"

[tool.hatch.version]
path = "src/speech_verification/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/speech_verification"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "uv>=0.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-parallel = "pytest -n auto {args:tests}"  # Parallel testing
test-cov = "pytest --cov=speech_verification --cov-report=term-missing --cov-report=html {args:tests}"
test-cov-parallel = "pytest -n auto --cov=speech_verification --cov-report=term-missing --cov-report=html {args:tests}"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "black src tests"
format-check = "black --check src tests"
type-check = "mypy src"
security = "bandit -r src -c pyproject.toml"
coverage-report = "coverage report --show-missing"
coverage-html = "coverage html"
all = [
    "format",
    "lint",
    "type-check",
    "test-cov-parallel",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "ARG002", # unused method argument (needed for interface compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"cli.py" = ["ARG001", "ARG002"]  # CLI interface needs unused args

[tool.ruff.lint.isort]
known-first-party = ["speech_verification"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "resemblyzer.*",
    "dtw.*",
    "soundfile.*",
    "audioread.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--color=yes",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["speech_verification"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]


# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]  # Skip assert_used and shell injection (false positives)

[tool.ruff.lint.per-file-ignores."tests/*"]
F841 = []  # Allow unused variables in tests
F401 = []  # Allow unused imports in tests
ARG001 = []  # Allow unused arguments in tests

[tool.ruff.lint.per-file-ignores."*_test.py"]
E402 = []
E731 = []
F841 = []
F401 = []
C408 = []

[tool.ruff.lint.per-file-ignores."voice-speech-verification.py"]
E402 = []
E731 = []
F841 = []
C408 = []
F401 = []

[tool.ruff.lint.per-file-ignores."test_demo_ensemble.py"]
E731 = []

[tool.ruff.lint.per-file-ignores."src/speech_verification/utils/audio.py"]
B904 = []
ARG001 = []

[tool.ruff.lint.per-file-ignores."src/speech_verification/cli.py"]
B904 = []
